# twittaloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Taskfile.yml  pyproject.toml  setup.py
tests/: test_twittaloader.py
twittaloader/: __main__.py  auth.py  config.py  core.py
